# mbengine

./: .gitignore  Cargo.toml  ENGINE_ROADMAP.md  LICENSE  build.rs
game/: Cargo.toml
game/src/: lib.rs
shaders/: bloom_downsample.frag  bloom_upsample.frag  compile.bat  cull.comp  post_process.frag  post_process.vert  shader.frag  shader.vert  shadow.vert  vert.spv
src/: asset_manager.rs  audio.rs  lib.rs  main.rs  physics.rs  vfs.rs
src/app/: application.rs  editor.rs  egui_win32.rs  hot_reload.rs  input.rs  mod.rs
src/containers/: dynamic_array.rs  fixed_array.rs  fixed_string.rs  hash_map.rs  mod.rs  ring_buffer.rs
src/ecs/: component_array.rs  components.rs  entity_manager.rs  mod.rs  reflection.rs  scheduler.rs  serialization.rs  system.rs  types.rs  world.rs
src/logging/: logger.rs  mod.rs
src/math/: aabb.rs  mat4.rs  mod.rs  quat.rs  transform.rs  vec.rs
src/memory/: arena.rs  memory_utils.rs  mod.rs  pool.rs  stack.rs  subsystem.rs
src/platform/: mod.rs  timer.rs  win32.rs  window.rs
src/renderer/: device.rs  mod.rs  render_graph.rs
src/renderer/shaders/: egui.frag  egui.vert  egui_frag.spv  egui_vert.spv
src/renderer/vulkan/: bloom.rs  buffer.rs  compute_cull.rs  device.rs  egui_backend.rs  mesh.rs  mod.rs  offscreen.rs  pipeline.rs  post_process_pipeline.rs  render_graph.rs  render_pass.rs  shadow_pipeline.rs  swapchain.rs  texture.rs
src/utils/: mod.rs  shader_compiler.rs
tests/: test_app.rs  test_containers.rs  test_ecs.rs  test_math.rs  test_platform.rs  test_renderer.rs
