[package]
name = "engine"
version = "0.1.0"
edition = "2021"
description = "Custom game engine — Data-Oriented Design, custom allocators, ECS"

[lib]
name = "engine"
path = "src/lib.rs"

[[test]]
name = "test_ecs"
path = "tests/test_ecs.rs"

[profile.dev]
overflow-checks = true

[profile.release]
opt-level = 3
lto = true

[dependencies]
ash = "0.38"
image = { version = "0.25", features = ["hdr"] }
memoffset = "0.9.1"
tobj = "4.0"
rapier3d = "0.17"
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui = "0.27"
notify = "6.1.1"
